--- a/mowa.html
+++ b/mowa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyfry po 4 – działa na iPhonie (z pauzą mikrofonu)</title>
+    <title>Cyfry po 4 – z LOGAMI w konsoli</title>
     <style>
         body { font-family: -apple-system, Arial, sans-serif; text-align: center; margin: 0; padding: 20px; background: #f4f6f9; }
         h1 { font-size: 28px; color: #2c3e50; }
@@ -16,28 +16,29 @@
     </style>
 </head>
 <body>
-    <h1>Grupy po 4 cyfry</h1>
+    <h1>Grupy po 4 cyfry – testuj z konsolą!</h1>
     <button id="start">▶ Rozpocznij</button>
     <button id="stop">■ Zatrzymaj</button>
-    <div id="status">Dotknij Rozpocznij i mów</div>
+    <div id="status">Otwórz konsolę (Safari na iPhonie: podłącz do Maca) i kliknij Rozpocznij</div>
     <table id="tabela"><thead><tr><th>Grupy</th></tr></thead><tbody id="rows"></tbody></table>
     <div class="info">
-        <strong>Na iPhonie (Safari):</strong><br>
-        • Mikrofon pauzuje na ~1.8s podczas powtarzania grupy<br>
-        • Potwierdzenie głosowe OD RAZU po każdej grupie<br>
-        • Mów dalej – mikrofon wraca szybko!<br><br>
-        Jeśli pauza za krótka/długa – zmień liczbę 1800 na 1200-2500.
+        <strong>Sprawdź konsolę przeglądarki!</strong><br>
+        Zobaczysz wszystkie logi: kliknięcia, start/stop mikrofonu, surowy tekst, dodane grupy, speak, pauzy itp.
     </div>
 
     <script>
+        console.log('%c=== NOWY START STRONY ===', 'color: white; background: #2c3e50; font-size: 18px; padding: 10px;');
+
         const tbody = document.getElementById('rows');
         const statusEl = document.getElementById('status');
 
         const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
         if (!SpeechRecognition) {
-            alert('Tylko Safari na iPhonie obsługuje rozpoznawanie mowy!');
+            console.error('%cBRAK WSPARCIA DLA SpeechRecognition!', 'color: red; font-size: 20px;');
+            alert('Brak wsparcia – użyj Safari na iPhonie lub Chrome na laptopie');
             return;
         }
+        console.log('%cSpeechRecognition wspierany', 'color: green; font-weight: bold;');
 
         const recognition = new SpeechRecognition();
         recognition.lang = 'pl-PL';
@@ -50,33 +51,45 @@
         const digitToPolish = {'0':'zero','1':'jeden','2':'dwa','3':'trzy','4':'cztery','5':'pięć','6':'sześć','7':'siedem','8':'osiem','9':'dziewięć'};
 
         function speakGroup(group) {
-            const words = group.split('').map(d => digitToPolish[d]);
-            const utter = new SpeechSynthesisUtterance(words.join(' '));
+            console.log('%c>>> WYWOŁUJĘ SPEAK dla grupy:', 'color: #e67e22; font-size: 18px; font-weight: bold;', group);
+            const words = group.split('').map(d => digitToPolish[d] || d);
+            const text = words.join(' ');
+            const utter = new SpeechSynthesisUtterance(text);
             utter.lang = 'pl-PL';
             utter.rate = 1.8;
             utter.volume = 1.0;
+
+            utter.onstart = () => console.log('%cSPEAK START:', 'color: #27ae60;', text);
+            utter.onend = () => console.log('%cSPEAK KONIEC:', 'color: #27ae60;', text);
+            utter.onerror = (e) => console.error('%cBŁĄD SPEAK:', 'color: red;', e);
+
             speechSynthesis.speak(utter);
         }
 
         function pauseAndSpeak(group) {
-            if (isPausedForSpeak) return; // unikamy nakładania się
+            if (isPausedForSpeak) {
+                console.warn('%cJUŻ PAUZOWANE – ignoruję kolejną grupę', 'color: orange;');
+                return;
+            }
+            console.log('%cPAUZUJĘ mikrofon na ~1.8s dla speak:', 'color: #9b59b6; font-weight: bold;', group);
             isPausedForSpeak = true;
             recognition.stop();
 
             speakGroup(group);
 
-            // <<< TUTAJ ZMIEŃ CZAS PAUZY jeśli potrzeba (w milisekundach) >>>
             setTimeout(() => {
+                console.log('%cRESTART mikrofonu po pauzie');
                 isPausedForSpeak = false;
                 try {
                     recognition.start();
                 } catch (e) {
-                    console.log('Restart mikrofonu nieudany – kliknij Rozpocznij ponownie');
+                    console.error('%cBŁĄD restartu mikrofonu:', 'color: red;', e);
                 }
-            }, 1800); // 1800 ms = 1.8 sekundy – idealne dla większości iPhone'ów
+            }, 1800); // zmień na 1500-2500 jeśli potrzeba
         }
 
         function addGroup(group) {
+            console.log('%cDODAJĘ GRUPĘ DO TABELI:', 'color: #3498db; font-size: 18px; font-weight: bold;', group);
             const row = document.createElement('tr');
             const cell = document.createElement('td');
             cell.textContent = group;
@@ -86,11 +99,12 @@
 
             pauseAndSpeak(group);
 
-            statusEl.textContent = `Dodano i powtarzam: ${group}`;
+            statusEl.textContent = `Dodano: ${group} (powtarzam...)`;
             statusEl.style.color = '#27ae60';
         }
 
         function processBuffer() {
+            console.log('%cPRZETWARZAM BUFOR – długość:', 'color: #f1c40f;', buffer.length);
             while (buffer.length >= 4) {
                 const group = buffer.substring(0, 4);
                 buffer = buffer.substring(4);
@@ -98,48 +112,61 @@
             }
         }
 
+        recognition.onstart = () => {
+            console.log('%cMIKROFON START', 'color: #27ae60; font-size: 18px; font-weight: bold;');
+            statusEl.textContent = 'Słucham – mów cyfry!';
+        };
+
+        recognition.onend = () => {
+            console.log('%cMIKROFON END (pauza? ' + isPausedForSpeak + ')', 'color: #e74c3c; font-weight: bold;');
+            if (!isPausedForSpeak) {
+                statusEl.textContent = 'Mikrofon zatrzymany';
+            }
+        };
+
+        recognition.onerror = (event) => {
+            console.error('%cBŁĄD MIKROFONU:', 'color: red; font-size: 18px;', event.error);
+            statusEl.textContent = 'Błąd: ' + event.error;
+            statusEl.style.color = '#d63031';
+        };
+
         recognition.onresult = (event) => {
-            if (isPausedForSpeak) return;
+            if (isPausedForSpeak) {
+                console.log('%cIGNORUJĘ wynik – trwa pauza dla speak', 'color: orange;');
+                return;
+            }
+
+            console.log('%cONRESULT – wyników:', 'color: #3498db;', event.results.length - event.resultIndex);
 
             let hasNew = false;
             for (let i = event.resultIndex; i < event.results.length; i++) {
-                const digits = event.results[i][0].transcript.trim().replace(/[^0-9]/g, '');
+                const transcript = event.results[i][0].transcript;
+                console.log('%cSurowy tekst:', 'color: gray;', transcript);
+                const digits = transcript.trim().replace(/[^0-9]/g, '');
+                console.log('%cWyodrębnione cyfry:', 'color: #9b59b6;', digits || '(brak)');
                 if (digits && event.results[i].isFinal) {
                     buffer += digits;
                     hasNew = true;
+                    console.log('%cFINAL – dodano do bufora:', 'color: green;', digits, '→ bufor:', buffer);
                 }
             }
             if (hasNew) processBuffer();
         };
 
-        recognition.onerror = (event) => {
-            statusEl.textContent = 'Błąd mikrofonu: ' + event.error;
-            statusEl.style.color = '#d63031';
-        };
-
-        recognition.onstart = () => {
-            statusEl.textContent = 'Mów cyfry – słucham!';
-            statusEl.style.color = '#27ae60';
-        };
-
-        recognition.onend = () => {
-            if (!isPausedForSpeak) {
-                statusEl.textContent = 'Mikrofon zatrzymany – kliknij Rozpocznij';
-            }
-            processBuffer();
-        };
-
         document.getElementById('start').onclick = () => {
+            console.clear();
+            console.log('%c=== KLIKNIĘTO ROZPOCZNIJ ===', 'color: #f1c40f; background: #2c3e50; font-size: 20px; padding: 10px;');
             buffer = '';
             tbody.innerHTML = '';
-            // Odblokowanie dźwięku na iOS
+            // Prime dźwięku
             speechSynthesis.speak(new SpeechSynthesisUtterance(''));
             recognition.start();
         };
 
         document.getElementById('stop').onclick = () => {
+            console.log('%c=== KLIKNIĘTO ZATRZYMAJ ===', 'color: red; font-size: 18px;');
             recognition.stop();
         };
     </script>
 </body>
-</html>
+</html>ggggggggggggggggggggggggggggggggggggggggg
